# blog-rust-jv

./: .env  .travis.yml  Cargo.toml  README.md  Rocket.toml
backend/: Cargo.toml
backend/migrations/2019-03-30-121153_create_articles/: up.sql
backend/src/: main.rs  model.rs  schema.rs
frontend/src/app/: app.module.ts
frontend/src/app/article-list/single-article/: single-article.component.ts
src/: lib.rs  main.rs  model.rs
