[package]
name = "blog-rust-jv"
version = "0.1.0"
authors = ["Vawi <valentin.winnen@orange.fr>"]
edition = "2018"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]